# explainable-text-classifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  Untitled74.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: download_data.py  predict_cli.py
src/xtc/: __init__.py  api.py  config.py  data.py  evaluate.py  explain.py  model.py  train.py
tests/: test_api.py  test_data.py  test_model.py
